<resources>
    <string name="app_name">SocialMedia</string>
    <string name="made_by_monu">Made By Monu</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="resister">Resister</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="already_an_account_longin_here">Already an Account Longin here</string>
    <string name="login_here"> Login Here ? </string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search </string>
    <string name="add">Add</string>
    <string name="Reels">Reels</string>
    <string name="Profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="name1">Name</string>
    <string name="viewpager">ViewPager</string>
    <string name="upload_reels">Add Reel</string>
    <string name="add_post">Add Post</string>
    <string name="write_a_caption">Write a Caption</string>
    <string name="share_a_post">Share a post</string>
    <string name="your_post_may_appear_in_posts_and_can_be_seen_on_the_posts_may_be_tab_under_your_profile">Your Post may appear in Posts and can be seen on the posts may be tab under your profile</string>
    <string name="cancel">cancel</string>
    <string name="post_photos">Post Photos</string>
    <string name="select_reel">Select Reel</string>
    <string name="caption">Caption</string>
    <string name="like">Like</string>
    <string name="message">Message</string>
    <string name="nested_scrollview">Nested scrollView</string>
    <string name="follow">Follow</string>
    <string name="textview">TextView</string>
    <string name="follower">Follower</string>
    <string name="userbio">userbio</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="update_profile">update profile</string>
    <string name="usename">Usename</string>
    <string name="logout">Logout</string>
</resources>